CompilerPrinciple/熟悉Yacc的使用/cal.output
语法

    0 $accept: prog $end

    1 prog: prog exprp
    2     | exprp

    3 exprp: expr ENTER

    4 expr: expr LT expr
    5     | expr GT expr
    6     | expr EQ expr
    7     | expr ADD expr
    8     | expr SUB expr
    9     | expr MUL expr
   10     | expr DIV expr
   11     | expr AND expr
   12     | expr OR expr
   13     | NOT expr
   14     | LPAREN expr RPAREN
   15     | NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
LPAREN (258) 14
RPAREN (259) 14
ENTER (260) 3
NUMBER (261) 15
GT (262) 5
LT (263) 4
EQ (264) 6
ADD (265) 7
SUB (266) 8
MUL (267) 9
DIV (268) 10
OR (269) 12
AND (270) 11
NOT (271) 13


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
prog (18)
    on left: 1 2, on right: 0 1
exprp (19)
    on left: 3, on right: 1 2
expr (20)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 3 4 5 6 7 8 9
    10 11 12 13 14


State 0

    0 $accept: . prog $end

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    prog   转到状态 4
    exprp  转到状态 5
    expr   转到状态 6


State 1

   14 expr: LPAREN . expr RPAREN

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    expr  转到状态 7


State 2

   15 expr: NUMBER .

    $default  reduce using rule 15 (expr)


State 3

   13 expr: NOT . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    expr  转到状态 8


State 4

    0 $accept: prog . $end
    1 prog: prog . exprp

    $end    shift, and go to state 9
    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    exprp  转到状态 10
    expr   转到状态 6


State 5

    2 prog: exprp .

    $default  reduce using rule 2 (prog)


State 6

    3 exprp: expr . ENTER
    4 expr: expr . LT expr
    5     | expr . GT expr
    6     | expr . EQ expr
    7     | expr . ADD expr
    8     | expr . SUB expr
    9     | expr . MUL expr
   10     | expr . DIV expr
   11     | expr . AND expr
   12     | expr . OR expr

    ENTER  shift, and go to state 11
    GT     shift, and go to state 12
    LT     shift, and go to state 13
    EQ     shift, and go to state 14
    ADD    shift, and go to state 15
    SUB    shift, and go to state 16
    MUL    shift, and go to state 17
    DIV    shift, and go to state 18
    OR     shift, and go to state 19
    AND    shift, and go to state 20


State 7

    4 expr: expr . LT expr
    5     | expr . GT expr
    6     | expr . EQ expr
    7     | expr . ADD expr
    8     | expr . SUB expr
    9     | expr . MUL expr
   10     | expr . DIV expr
   11     | expr . AND expr
   12     | expr . OR expr
   14     | LPAREN expr . RPAREN

    RPAREN  shift, and go to state 21
    GT      shift, and go to state 12
    LT      shift, and go to state 13
    EQ      shift, and go to state 14
    ADD     shift, and go to state 15
    SUB     shift, and go to state 16
    MUL     shift, and go to state 17
    DIV     shift, and go to state 18
    OR      shift, and go to state 19
    AND     shift, and go to state 20


State 8

    4 expr: expr . LT expr
    5     | expr . GT expr
    6     | expr . EQ expr
    7     | expr . ADD expr
    8     | expr . SUB expr
    9     | expr . MUL expr
   10     | expr . DIV expr
   11     | expr . AND expr
   12     | expr . OR expr
   13     | NOT expr .

    $default  reduce using rule 13 (expr)


State 9

    0 $accept: prog $end .

    $default  接受


State 10

    1 prog: prog exprp .

    $default  reduce using rule 1 (prog)


State 11

    3 exprp: expr ENTER .

    $default  reduce using rule 3 (exprp)


State 12

    5 expr: expr GT . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    expr  转到状态 22


State 13

    4 expr: expr LT . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    expr  转到状态 23


State 14

    6 expr: expr EQ . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    expr  转到状态 24


State 15

    7 expr: expr ADD . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    expr  转到状态 25


State 16

    8 expr: expr SUB . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    expr  转到状态 26


State 17

    9 expr: expr MUL . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    expr  转到状态 27


State 18

   10 expr: expr DIV . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    expr  转到状态 28


State 19

   12 expr: expr OR . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    expr  转到状态 29


State 20

   11 expr: expr AND . expr

    LPAREN  shift, and go to state 1
    NUMBER  shift, and go to state 2
    NOT     shift, and go to state 3

    expr  转到状态 30


State 21

   14 expr: LPAREN expr RPAREN .

    $default  reduce using rule 14 (expr)


State 22

    4 expr: expr . LT expr
    5     | expr . GT expr
    5     | expr GT expr .
    6     | expr . EQ expr
    7     | expr . ADD expr
    8     | expr . SUB expr
    9     | expr . MUL expr
   10     | expr . DIV expr
   11     | expr . AND expr
   12     | expr . OR expr

    ADD  shift, and go to state 15
    SUB  shift, and go to state 16
    MUL  shift, and go to state 17
    DIV  shift, and go to state 18
    OR   shift, and go to state 19
    AND  shift, and go to state 20

    $default  reduce using rule 5 (expr)


State 23

    4 expr: expr . LT expr
    4     | expr LT expr .
    5     | expr . GT expr
    6     | expr . EQ expr
    7     | expr . ADD expr
    8     | expr . SUB expr
    9     | expr . MUL expr
   10     | expr . DIV expr
   11     | expr . AND expr
   12     | expr . OR expr

    ADD  shift, and go to state 15
    SUB  shift, and go to state 16
    MUL  shift, and go to state 17
    DIV  shift, and go to state 18
    OR   shift, and go to state 19
    AND  shift, and go to state 20

    $default  reduce using rule 4 (expr)


State 24

    4 expr: expr . LT expr
    5     | expr . GT expr
    6     | expr . EQ expr
    6     | expr EQ expr .
    7     | expr . ADD expr
    8     | expr . SUB expr
    9     | expr . MUL expr
   10     | expr . DIV expr
   11     | expr . AND expr
   12     | expr . OR expr

    ADD  shift, and go to state 15
    SUB  shift, and go to state 16
    MUL  shift, and go to state 17
    DIV  shift, and go to state 18
    OR   shift, and go to state 19
    AND  shift, and go to state 20

    $default  reduce using rule 6 (expr)


State 25

    4 expr: expr . LT expr
    5     | expr . GT expr
    6     | expr . EQ expr
    7     | expr . ADD expr
    7     | expr ADD expr .
    8     | expr . SUB expr
    9     | expr . MUL expr
   10     | expr . DIV expr
   11     | expr . AND expr
   12     | expr . OR expr

    MUL  shift, and go to state 17
    DIV  shift, and go to state 18
    OR   shift, and go to state 19
    AND  shift, and go to state 20

    $default  reduce using rule 7 (expr)


State 26

    4 expr: expr . LT expr
    5     | expr . GT expr
    6     | expr . EQ expr
    7     | expr . ADD expr
    8     | expr . SUB expr
    8     | expr SUB expr .
    9     | expr . MUL expr
   10     | expr . DIV expr
   11     | expr . AND expr
   12     | expr . OR expr

    MUL  shift, and go to state 17
    DIV  shift, and go to state 18
    OR   shift, and go to state 19
    AND  shift, and go to state 20

    $default  reduce using rule 8 (expr)


State 27

    4 expr: expr . LT expr
    5     | expr . GT expr
    6     | expr . EQ expr
    7     | expr . ADD expr
    8     | expr . SUB expr
    9     | expr . MUL expr
    9     | expr MUL expr .
   10     | expr . DIV expr
   11     | expr . AND expr
   12     | expr . OR expr

    OR   shift, and go to state 19
    AND  shift, and go to state 20

    $default  reduce using rule 9 (expr)


State 28

    4 expr: expr . LT expr
    5     | expr . GT expr
    6     | expr . EQ expr
    7     | expr . ADD expr
    8     | expr . SUB expr
    9     | expr . MUL expr
   10     | expr . DIV expr
   10     | expr DIV expr .
   11     | expr . AND expr
   12     | expr . OR expr

    OR   shift, and go to state 19
    AND  shift, and go to state 20

    $default  reduce using rule 10 (expr)


State 29

    4 expr: expr . LT expr
    5     | expr . GT expr
    6     | expr . EQ expr
    7     | expr . ADD expr
    8     | expr . SUB expr
    9     | expr . MUL expr
   10     | expr . DIV expr
   11     | expr . AND expr
   12     | expr . OR expr
   12     | expr OR expr .

    AND  shift, and go to state 20

    $default  reduce using rule 12 (expr)


State 30

    4 expr: expr . LT expr
    5     | expr . GT expr
    6     | expr . EQ expr
    7     | expr . ADD expr
    8     | expr . SUB expr
    9     | expr . MUL expr
   10     | expr . DIV expr
   11     | expr . AND expr
   11     | expr AND expr .
   12     | expr . OR expr

    $default  reduce using rule 11 (expr)
